# wxMathPlot

./: .clang_complete  .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.txt  mathplot.cpp  mathplot.h
main/: main_example_1.cpp  main_example_2.cpp  main_example_3.cpp  main_point_chart.cpp
samples/sample1/: mp1.cpp
samples/sample2/: mp2.cpp
samples/sample3/: mp3.cpp
